--- a/src/features/auth/StyleSheets/Register.css
+++ b/src/features/auth/StyleSheets/Register.css
@@ -100,6 +100,10 @@ form {
   border-color: #1163c7;
 }
 
+select{
+
+  color: #858585 !important;
+}
 /* Phone input row */
 .phone-input,
 .otp-input {
@@ -146,11 +150,11 @@ form {
   background: none;
   border: none;
   color: #0066cc;
-  font-weight: 500;
+  font-weight: 600;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 10px;
   white-space: nowrap;
-  margin-right: 10px;
+  margin-right: 6px;
 }
 
 .checkbox-row {
