--- a/src/features/withoutauth/Stylesheets/SearchResult.css
+++ b/src/features/withoutauth/Stylesheets/SearchResult.css
@@ -12,7 +12,7 @@
   gap: 30px;
   padding: 0px clamp(1rem, -0.6478rem + 7.6642vw, 6.25rem);
   background-color: #ffffff;
-  box-shadow: 0px 4px 4px 0px #1163c740;
+  /* box-shadow: 0px 4px 4px 0px #1163c740; */
   width: 100%;
   box-sizing: border-box;
   margin-bottom: 30px;
@@ -39,6 +39,7 @@
   /* width: 20vw; */
   height: 50px;
   box-sizing: border-box;
+  margin-top: 20px;
 }
 
 .search-input img {
@@ -91,7 +92,19 @@
   margin-top: 30px;
 }
 
+@media screen and (max-width: 991px) {
+
+  .search-input{
+
+    position: unset !important;
+    margin-top: 40px !important;
+  }
+  
+}
+
 @media (max-width: 768px) {
+
+ 
   .filter-bar {
     flex-direction: column;
     justify-content: center;
@@ -109,6 +122,14 @@
 }
 
 @media (max-width: 480px) {
+
+    .search-input{
+
+    margin-top: 20px !important;
+  }
+
+ 
+ 
   .filter-bar {
     gap: 12px;
     padding: 12px;
