--- a/src/features/withoutauth/Stylesheets/VenuePage.css
+++ b/src/features/withoutauth/Stylesheets/VenuePage.css
@@ -10,7 +10,7 @@
   align-items: center;
   padding: 0px clamp(1rem, -0.6478rem + 7.6642vw, 6.25rem);
   background-color: #ffffff;
-  box-shadow: 0px 4px 4px 0px #1163c740;
+  /* box-shadow: 0px 4px 4px 0px #1163c740; */
   width: 100%;
   box-sizing: border-box;
   /* margin-top: 30px; */
@@ -18,8 +18,8 @@
   height: 86px;
   /* position: absolute;
     top: 100px; */
-  border-bottom-right-radius: 40px;
-  border-bottom-left-radius: 40px;
+  /* border-bottom-right-radius: 40px;
+  border-bottom-left-radius: 40px; */
   /* border: 1px solid #e5e7eb; */
 }
 
@@ -42,9 +42,12 @@
   border-radius: 16px;
   padding: 10px 10px;
   gap: 10px;
-  /* width: 20vw; */
   height: 50px;
   box-sizing: border-box;
+  position: absolute;
+  right: 6%;
+  width: 100%;
+  max-width: 770px;
 }
 
 /* Input Styling */
@@ -59,7 +62,7 @@
 .search-input input::placeholder {
   color: #525252;
   opacity: 1;
-  font-size: 1.2rem;
+  font-size: 16px;
 }
 
 .search-input input:focus {
@@ -97,6 +100,14 @@
   background-clip: padding-box, border-box;
 }
 
+.checkbox-item span {
+
+  color: #172A39;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: 'DM Sans';
+}
 .venue-card-wrapper {
   width: 298px;
   /* height: 320px !important; */
